--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
+    "jotai": "^2.2.1",
     "lucide-react": "^0.248.0",
     "next": "13.4.7",
     "next-themes": "^0.2.1",
